modulos super admin

--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -7,3 +7,11 @@
 // Bootstrap
 // @import 'bootstrap/scss/bootstrap';
 
+.admin-input .v-input__append-inner{
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+.admin-input fieldset {
+    border: 2px solid !important;
+    // color: #494949 !important;
+}
