--- a/public/css/super-admin.css
+++ b/public/css/super-admin.css
@@ -3,3 +3,21 @@
 .v-date-picker-table {
   height: auto !important;
 }
+
+.admin-input .v-input__append-inner {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
+}
+
+.admin-input fieldset {
+  border: 2px solid !important;
+}
+
+.table-custom tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.contract_w {
+  width: 150px !important;
+  max-width: 150px !important;
+}
