--- a/public/css/super-admin.css
+++ b/public/css/super-admin.css
@@ -1,23 +1,3 @@
 @import url(https://fonts.bunny.net/css?family=Nunito);
 @import url(https://fonts.googleapis.com/css2?family=Public+Sans:wght@100&display=swap);
-.v-date-picker-table {
-  height: auto !important;
-}
-
-.admin-input .v-input__append-inner {
-  margin-top: auto !important;
-  margin-bottom: auto !important;
-}
-
-.admin-input fieldset {
-  border: 2px solid !important;
-}
-
-.table-custom tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.contract_w {
-  width: 150px !important;
-  max-width: 150px !important;
-}
+.v-date-picker-table{height:auto!important}.admin-input .v-input__append-inner{margin-bottom:auto!important;margin-top:auto!important}.admin-input fieldset{border:2px solid!important}.table-custom tbody tr:nth-of-type(odd){background-color:rgba(0,0,0,.05)}.contract_w{max-width:150px!important;width:150px!important}
